# geosona

./: README.md  TODO.md  geosona.code-workspace
backend/: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt
backend/tests/: conftest.py  test_main.py
data-pipeline/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
data-pipeline/config/: settings.py
data-pipeline/extractors/: __init__.py  musicbrainz.py
data-pipeline/models/: artist.py
data-pipeline/scripts/: fetch_musicbrainz.py
data-pipeline/tests/: __init__.py  conftest.py  test_integration.py  test_models.py  test_musicbrainz.py
data-pipeline/utils/: logger.py
database/neo4j/: README.md
database/neo4j/init/: 01-artist-influences.cypher
database/postgres/: README.md
database/postgres/init/: 01-init.sql
docs/: ARCHITECTURE.md
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  eslint.config.js  index.html  nginx.conf  package.json  pnpm-lock.yaml
frontend/src/: App.test.tsx  App.tsx  index.css
infrastructure/: .env.example  README.md  docker-compose.yml
